// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartContainer > Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        class="w-8 h-8 text-slate-500 mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-slate-400"
      >
        无数据
      </span>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for error state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        class="w-8 h-8 text-red-400 mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-red-400 mb-3"
      >
        加载失败
      </span>
      <button
        class="flex items-center gap-2 px-3 py-1.5 text-xs bg-surface-200 hover:bg-surface-300 text-white rounded-lg transition-colors"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
        重试
      </button>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex items-center justify-between px-4 py-3 border-b border-white/5"
    >
      <div>
        <h3
          class="text-sm font-medium text-white"
        >
          加载中
        </h3>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        class="w-8 h-8 text-primary animate-spin mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="text-sm text-slate-400"
      >
        加载中...
      </span>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for normal state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex items-center justify-between px-4 py-3 border-b border-white/5"
    >
      <div>
        <h3
          class="text-sm font-medium text-white"
        >
          销售图表
        </h3>
      </div>
    </div>
    <div
      class="p-4"
    >
      <div>
        图表内容
      </div>
    </div>
  </div>
</div>
`;
